fix overlap at form-expression modal related to #607

--- a/app/styles/component-styles/forms/form-attribute-function.scss
+++ b/app/styles/component-styles/forms/form-attribute-function.scss
@@ -37,10 +37,11 @@
                 table {
                   display: flex;
                   flex-flow: column;
-                  height: calc(100% - 40px);
+                  height: calc(100% - 50px);
                   width: 100%;
                   max-height: calc(80vh - 260px);
-                  thead, tbody tr {
+                  thead,
+                  tbody tr {
                     display: table;
                     table-layout: fixed;
                   }
@@ -66,7 +67,7 @@
                       .select2-selection__rendered {
                         line-height: 1.8 !important;
                       }
-                      .select2-container .select2-selection--single{
+                      .select2-container .select2-selection--single {
                         height: calc(2.5rem - 2px) !important;
                       }
                       .select2-selection__choice {
